--- a/软件工程作业2-图形选择/.project
+++ b/软件工程作业2-图形选择/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>text2</name>
+	<name>软件工程作业2-图形选择</name>
 	<comment></comment>
 	<projects>
 	</projects>
